# Digital-Virtual-Cell

./: .gitignore  README.md  generate_predictions.py  main.py  make_submission.py  model.py  pyproject.toml  read_parquet.py  read_predictions.py  requirements.txt
schemas/: test_compounds.json  test_genes.json  training_compounds.json  training_counts.json  training_metadata.json
src/: cell_state.py  config.py  data.py  fetch_external.py  fusion.py  interpret.py  layer3_fusion.py  layer4_interpret.py  loss.py  placeholder.py  predict.py  runs.py  train.py
