[project]
name = "digital-virtual-cell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "rdkit",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "transformers",
    "vcpi-prediction-contest",
]

[tool.uv.sources]
vcpi-prediction-contest = { git = "https://github.com/virtualcell-vcpi/vcpi-prediction-contest-2026.git" }
