[project]
name = "digital-virtual-cell"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chembl-webresource-client>=0.10.9",
    "gseapy>=1.2.1",
    "mygene>=3.2.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "vcpi-prediction-contest",
]

[tool.uv.sources]
vcpi-prediction-contest = { git = "https://github.com/virtualcell-vcpi/vcpi-prediction-contest-2026.git" }
